<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateAccountActivity"
    android:orientation="vertical">

    <TextView
        style="@style/CreateAccountTitle"
        android:text="@string/txt_title_create_account"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="-50dp">

            <Button
                style="@style/CreateAccountButtons"
                android:id="@+id/button_create_account1"
                android:layout_marginBottom="15dp"
                android:background="@drawable/round_button"
                android:text="@string/txt_btn_create_account1" />

            <Button
                style="@style/CreateAccountButtons"
                android:id="@+id/button_create_account2"
                android:layout_marginTop="15dp"
                android:background="@drawable/round_button"
                android:text="@string/txt_btn_create_account2" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>